examples/test/testpolicy5956.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5956
  namespace: namespace52
spec:
  podSelector:
    matchLabels:
      key12: value11
      key40: value24
      key28: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value43
          key18: value4
          key21: value42
      podSelector:
        matchLabels:
          key30: value10
